# SpookyMatch

./: SpookyMatch.sln  SpookyMatch.vcxproj  SpookyMatch.vcxproj.filters  icon.rc  meson.build
SpookyMatch/x64/Debug/: SpookyMatch.exe.recipe  SpookyMatch.ilk  game.obj.enc  icon.obj.enc  vc143.idb
SpookyMatch/x64/Debug/SpookyMatch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SpookyMatch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SpookyMatch/x64/Release/: SpookyMatch.exe.recipe  SpookyMatch.iobj  SpookyMatch.ipdb
SpookyMatch/x64/Release/SpookyMatch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SpookyMatch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/icon/: icon.res
src/: .cproject  Bugs.txt  ToDo.txt  main.cpp  meson.build
src/Audio/: DJ.cpp  DJ.h
src/Core/: Camera.h  Collision.cpp  Collision.h  Enums.h  Input.h  Math.h  Vec3.h
src/Engine/: .cproject  .project  Collision.cpp  Collision.h  Engine.cpp  Engine.h  Enums.h  Input.cpp  Input.h  meson.build
src/Engine/Audio/: DJ.cpp  DJ.h  meson.build
src/Engine/Graphics/: .cproject  .project  Camera.h  Font.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Text.h  Window.cpp  Window.h  meson.build
src/Engine/Math/: .cproject  .project  Geometry.h  Math.cpp  Vec2.h  meson.build
src/Entities/: .cproject  .project  Entity.cpp  Entity.h  Icon.cpp  Icon.h  meson.build
src/Entities/UI/: .cproject  .project  Button.cpp  Button.h  Picker.cpp  Picker.h  Slider.cpp  Slider.h  Toggle.cpp  Toggle.h  UI.cpp  UI.h  meson.build
src/Game/: .cproject  .project  Game.cpp  Game.h  Menu.cpp  Menu.h  Scene.cpp  Scene.h  meson.build
src/Graphics/: Font.h  Renderer.cpp  Renderer.h  Sprite.h  Text.h  Window.h
